Fixed color contrast and size error

--- a/frontend/src/components/Header/Header.css
+++ b/frontend/src/components/Header/Header.css
@@ -4,7 +4,7 @@
     @apply relative flex items-center justify-between px-6 py-4;
 }
 
-.header-wrapper h2{
+.header-wrapper h1{
     @apply text-xl font-bold;
 }
 
